@@ -4,7 +4,7 @@ Device 0 (VID=0502 and PID=337d) is UNKNOWN.
 ============= NEW  =============
 
 0. Check RunThr() in python/octave
-1. MPI_Send(), MPI_Recv()
+
 2. Use Hershey as built-in font ?!!
 3. Import/Export via GIF (as 3d data) ???
 4. Read DICOM files ???
@@ -15,11 +15,11 @@ Device 0 (VID=0502 and PID=337d) is UNKNOWN.
 9. Save primitives for frames (not bitmap) ??? -- see MGL_USEDRWDAT
 10. Enable several fonts at the same picture
 11. Table(float x, float y, HCDT dat, char *xlabels, char *ylabels, char *stl) -- draw table with values (+ auto reduce font size?)
+
 12. Parallelization of drawing (MathGL level) -- bug with primitives drawing --> pixel.cpp
 14. Axis -- projection (ternary + quaternary)
 15. Examples of animation, u3d, x3d, js and so on
 
-16. Check fontsize maximum ?!?
 17. curved text (in new sample) look not so good
 18. emulate fog in EPS/SVG
 19. line segment losses in EPS ???
@@ -31,8 +31,8 @@ Device 0 (VID=0502 and PID=337d) is UNKNOWN.
 24. Use OI & Z for determining {x,y,z} from {xs,ys}. Try to find closest.
 25. More accurate intersections in Region
 26. Add flag for drawing 3d arrows instead of 2d (S,D -- cube, T -- sq.pyramid, I -- square, O -- sphere???, A,K,V -- ???)
-27. Add color region cutting in SetCutBox() ???
-28. Add extra texture in Error -- for handling transparency of "marks"
+
+28. Add extra texture in Error -- for handling transparency of "marks" ???
 29. Textual colors, like "{0xFF00FF}" ?!?
 30. Auto axis range for formulas, like AutoRange("y(x)") or AutoRange('x',"x(t)").
 31. Add Vect3 for vectors on slice
@@ -47,6 +47,7 @@ Device 0 (VID=0502 and PID=337d) is UNKNOWN.
 1. FAQ about widget classes in non-GNU compilers.
 2. Text about UDAV
 3. Add FAQ about MPEG/GIF and PDF
+4. Hint that NAN colors can be used for removing points from drawing
 
 ============= UDAV =============
 
